@@ -172,16 +172,6 @@ typedef long (CALLBACK* SPUinit)(void);
 typedef long (CALLBACK* SPUshutdown)(void);	
 typedef long (CALLBACK* SPUclose)(void);			
 typedef void (CALLBACK* SPUplaySample)(unsigned char);		
-typedef void (CALLBACK* SPUstartChannels1)(unsigned short);	
-typedef void (CALLBACK* SPUstartChannels2)(unsigned short);
-typedef void (CALLBACK* SPUstopChannels1)(unsigned short);	
-typedef void (CALLBACK* SPUstopChannels2)(unsigned short);	
-typedef void (CALLBACK* SPUputOne)(uint32_t,unsigned short);			
-typedef unsigned short (CALLBACK* SPUgetOne)(uint32_t);
-typedef void (CALLBACK* SPUsetAddr)(unsigned char, unsigned short);
-typedef void (CALLBACK* SPUsetPitch)(unsigned char, unsigned short);
-typedef void (CALLBACK* SPUsetVolumeL)(unsigned char, short);
-typedef void (CALLBACK* SPUsetVolumeR)(unsigned char, short);
 typedef void (CALLBACK* SPUwriteRegister)(unsigned long, unsigned short);
 typedef unsigned short (CALLBACK* SPUreadRegister)(unsigned long);
 typedef void (CALLBACK* SPUwriteDMA)(unsigned short);
@@ -215,16 +205,6 @@ extern SPUtest             SPU_test;
 extern SPUopen             SPU_open;
 extern SPUclose            SPU_close;
 extern SPUplaySample       SPU_playSample;
-extern SPUstartChannels1   SPU_startChannels1;
-extern SPUstartChannels2   SPU_startChannels2;
-extern SPUstopChannels1    SPU_stopChannels1;
-extern SPUstopChannels2    SPU_stopChannels2;
-extern SPUputOne           SPU_putOne;
-extern SPUgetOne           SPU_getOne;
-extern SPUsetAddr          SPU_setAddr;
-extern SPUsetPitch         SPU_setPitch;
-extern SPUsetVolumeL       SPU_setVolumeL;
-extern SPUsetVolumeR       SPU_setVolumeR;
 extern SPUwriteRegister    SPU_writeRegister;
 extern SPUreadRegister     SPU_readRegister;
 extern SPUwriteDMA         SPU_writeDMA;
