@@ -1,3 +1,8 @@
+May 9, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
+
+ * libpcsxcore/plugins.c: Removed support for ancient GPU/SPU plugin APIs.
+ * libpcsxcore/plugins.h: Likewise.
+
 May 8, 2010 edgbla <edgbla@yandex.ru>
 
  * plugins/dfxvideo/prim.c: Dithering logic was fixed.
